--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,81 +1,631 @@
+@import 'theme_color';
+@import 'fonts';
+@import 'mixin';
+@import 'responsive';
 
-@import "~bootstrap/scss/bootstrap";
-@import "~@fortawesome/fontawesome-free/scss/fontawesome.scss";
-@import "~@fortawesome/fontawesome-free/scss/solid.scss";
-@import "~@fortawesome/fontawesome-free/scss/regular.scss";
-@import "~@fortawesome/fontawesome-free/scss/brands.scss";
-@import "~select2/src/scss/core.scss";
-@import "~@ttskch/select2-bootstrap4-theme/src/select2-bootstrap4.scss";
+/* ----- Base CSS ----- */
 
-
-.ox-footer {
-  padding: 2.5rem 0;
-  color: #999;
-  background-color: #f9f9f9;
-  border-top: .05rem solid #e5e5e5;
-}
-
-/**
- * Zoom sur les images
- */
-.img-hover-zoom {
-  overflow: hidden;
-  display: block;
-}
-
-.img-hover-zoom img {
-  transition: transform .8s ease;
-}
-
-.img-hover-zoom:hover img {
-  transform: scale(1.2);
-}
-
-
-
-.tt-query {
-    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-       -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-            box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-  }
-  
-  .tt-hint {
-    color: #999
-  }
-  
-  .tt-menu {
-    width: 422px;
-    margin: 12px 0;
-    padding: 8px 0;
-    background-color: #fff;
-    border: 1px solid #ccc;
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    -webkit-border-radius: 8px;
-       -moz-border-radius: 8px;
-            border-radius: 8px;
-    -webkit-box-shadow: 0 5px 10px rgba(0,0,0,.2);
-       -moz-box-shadow: 0 5px 10px rgba(0,0,0,.2);
-            box-shadow: 0 5px 10px rgba(0,0,0,.2);
-  }
-  
-  .tt-suggestion {
-    padding: 3px 20px;
-    font-size: 18px;
-    line-height: 24px;
-  }
-  
-  .tt-suggestion:hover {
-    cursor: pointer;
-    color: #fff;
-    background-color: #0097cf;
-  }
-  
-  .tt-suggestion.tt-cursor {
-    color: #fff;
-    background-color: #0097cf;
-  
-  }
-  
-  .tt-suggestion p {
+* {
     margin: 0;
-  }
+    padding: 0;
+}
+
+body {
+    font-family: $fonts;
+    font-size: 14px;
+    background-color: $bg-gray;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    color: $heading-color;
+    line-height: 1.3;
+    font-weight: 600;
+
+}
+
+p {
+    color: $text-color;
+    font-size: 14px;
+    line-height: 2;
+    font-weight: 400;
+}
+
+a,
+a:hover,
+a:focus {
+    @include trans-duration(500ms);
+    text-decoration: none;
+    outline: 0 solid transparent;
+    color: $heading-color;
+    font-weight: 600;
+    font-size: 14px;
+    color: $text-color2;
+}
+
+ul,
+ol {
+    margin: 0;
+    li {
+        list-style: none;
+    }
+}
+
+img {
+    height: auto;
+    max-width: 100%;
+}
+
+/* Spacing */
+
+.mt-15 {
+    margin-top: 15px !important;
+}
+
+.mt-30 {
+    margin-top: 30px !important;
+}
+
+.mt-50 {
+    margin-top: 50px !important;
+}
+
+.mt-70 {
+    margin-top: 70px !important;
+}
+
+.mt-100 {
+    margin-top: 100px !important;
+}
+
+.mb-15 {
+    margin-bottom: 15px !important;
+}
+
+.mb-30 {
+    margin-bottom: 30px !important;
+}
+
+.mb-50 {
+    margin-bottom: 50px !important;
+}
+
+.mb-70 {
+    margin-bottom: 70px !important;
+}
+
+.mb-80 {
+    margin-bottom: 80px !important;
+}
+
+.mb-100 {
+    margin-bottom: 100px !important;
+}
+
+.ml-15 {
+    margin-left: 15px !important;
+}
+
+.ml-30 {
+    margin-left: 30px !important;
+}
+
+.ml-50 {
+    margin-left: 50px !important;
+}
+
+.mr-15 {
+    margin-right: 15px !important;
+}
+
+.mr-30 {
+    margin-right: 30px !important;
+}
+
+.mr-50 {
+    margin-right: 50px !important;
+}
+
+/* Height */
+
+.height-400 {
+    height: 400px !important;
+}
+
+.height-500 {
+    height: 500px !important;
+}
+
+.height-600 {
+    height: 600px !important;
+}
+
+.height-700 {
+    height: 700px !important;
+}
+
+.height-800 {
+    height: 800px !important;
+}
+
+/* Section Padding */
+
+.section-padding-80 {
+    padding-top: 80px;
+    padding-bottom: 80px;
+}
+
+.section-padding-80-0 {
+    padding-top: 80px;
+    padding-bottom: 0;
+}
+
+.section-padding-0-80 {
+    padding-top: 0;
+    padding-bottom: 80px;
+}
+
+/* Section Heading */
+
+.section-heading {
+    position: relative;
+    z-index: 1;
+    margin-bottom: 50px;
+    text-align: center;
+    h3 {
+        font-size: 30px;
+        margin-bottom: 0;
+    }
+    &.text-left {
+        text-align: left !important;
+    }
+    &.white {
+        h3 {
+            color: $white-color;
+        }
+    }
+}
+
+/* Button */
+
+.mycook-btn {
+    display: inline-block;
+    min-width: 160px;
+    height: 60px;
+    color: $white-color;
+    border: none;
+    border-left: 3px solid $border-color;
+    border-radius: 0;
+    padding: 0 30px;
+    font-size: 16px;
+    line-height: 58px;
+    font-weight: 600;
+    @include trans-duration(500ms);
+    text-transform: capitalize;
+    background-color: $bg-default;
+    &.active,
+    &:hover,
+    &:focus {
+        font-size: 16px;
+        font-weight: 600;
+        color: $white-color;
+        background-color: $border-color;
+        border-color: $bg-default;
+    }
+    &.btn-small {
+        font-size: 12px !important;
+        height: 32px !important;
+        padding: 0 10px !important;
+        line-height: 30px !important;
+    }
+    &.btn-2 {
+        background-color: $border-color;
+        border-color: $bg-default;
+        &.active,
+        &:hover,
+        &:focus {
+            background-color: $bg-default;
+            border-color: $border-color;
+        }
+    }
+    &.btn-3 {
+        background-color: $text-color2;
+        border-color: $border-color;
+        &.active,
+        &:hover,
+        &:focus {
+            background-color: $bg-default;
+            border-color: $border-color;
+        }
+    }
+    &.btn-4 {
+        background-color: transparent;
+        border: 3px solid $bg-default;
+        line-height: 53px;
+        color: $bg-default;
+        @media #{$breakpoint-xs} {
+            height: 40px;
+            line-height: 33px;
+        }
+        &.active,
+        &:hover,
+        &:focus {
+            line-height: 53px;
+            color: $white-color;
+            background-color: $bg-default;
+            @media #{$breakpoint-xs} {
+                height: 40px;
+                line-height: 33px;
+            }
+        }
+    }
+    @media #{$breakpoint-xs} {
+        height: 40px;
+        line-height: 39px;
+    }
+}
+
+
+/* ----- Background Image ----- */
+
+.bg-img {
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.bg-white {
+    background-color: #ffffff !important;
+}
+
+.bg-dark {
+    background-color: #000000 !important;
+}
+
+.bg-transparent {
+    background-color: transparent !important;
+}
+
+.font-bold {
+    font-weight: 700;
+}
+
+.font-light {
+    font-weight: 300;
+}
+
+.bg-overlay {
+    position: relative;
+    z-index: 2;
+    background-position: center center;
+    background-size: cover;
+    &::after {
+        background-color: rgba(10, 12, 18, 0.55);
+        position: absolute;
+        z-index: -1;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        content: "";
+    }
+}
+
+/* ----- Search Wrapper ----- */
+
+.search-wrapper {
+    width: 100%;
+    height: 70px;
+    position: fixed;
+    z-index: 200;
+    top: -80px;
+    left: 0;
+    background-color: $bg-default;
+    @include trans-duration(700ms);
+    form {
+        position: relative;
+        z-index: 1;
+        input {
+            width: 90%;
+            height: 40px;
+            border: 2px solid $white-color;
+            font-size: 12px;
+            font-style: italic;
+            padding: 0 20px;
+            margin: 15px 0;
+            @media #{$breakpoint-xs} {
+                width: 80%;
+            }
+        }
+        button {
+            position: absolute;
+            width: 60px;
+            height: 40px;
+            z-index: 1;
+            top: 15px;
+            border: none;
+            right: 10%;
+            cursor: pointer;
+            outline: none;
+            @media #{$breakpoint-xs} {
+                right: 20%;
+            }
+        }
+    }
+    .close-btn {
+        position: absolute;
+        width: 70px;
+        height: 100%;
+        background-color: $heading-color;
+        line-height: 50px;
+        color: $white-color;
+        text-align: center;
+        cursor: pointer;
+        line-height: 70px;
+        font-size: 12px;
+        right: 0;
+        top: 0;
+        z-index: 100;
+    }
+    &.on {
+        top: 0;
+    }
+}
+
+/* ----- Header Area CSS ----- */
+
+.header-area {
+    position: relative;
+    z-index: 100;
+    width: 100%;
+    .top-header-area {
+        width: 100%;
+        height: 50px;
+        background-color: $white-color;
+        border-bottom: 1px solid #dddee9;
+        @media #{$breakpoint-xs} {
+            height: 70px;
+        }
+        .breaking-news {
+            position: relative;
+            z-index: 1;
+            .ticker {
+                width: 100%;
+                text-align: left;
+                position: relative;
+                overflow: hidden;
+                font-size: 14px;
+                color: #b6b6b6;
+                font-style: italic;
+            }
+        }
+        .top-social-info {
+            a {
+                display: inline-block;
+                color: #b6b6b6;
+                font-size: 13px;
+                margin-right: 30px;
+                &:last-child {
+                    margin-right: 0;
+                }
+                &:hover,
+                &:focus,
+                &.active {
+                    color: $hover-color;
+                }
+            }
+        }
+    }
+    .delicious-main-menu {
+        position: relative;
+        width: 100%;
+        z-index: 100;
+        height: 145px;
+        @media #{$breakpoint-xs} {
+            height: 80px;
+        }
+        .classy-nav-container {
+            background-color: transparent;
+        }
+        .classy-navbar {
+            height: 145px;
+            padding: 0;
+            @media #{$breakpoint-xs} {
+                height: 80px;
+            }
+            .classynav ul li a {
+                font-weight: 600;
+                &:hover,
+                &:focus {
+                    font-weight: 600;
+                }
+            }
+            .classynav > ul > li > a {
+                text-transform: uppercase;
+                padding: 12px 18px 11px;
+                background-color: transparent;
+                border-bottom: 3px solid transparent;
+                line-height: 1;
+                color: $text-color2;
+                font-weight: 600;
+                &:hover,
+                &:focus {
+                    font-size: 14px;
+                    color: $white-color;
+                    background-color: $bg-default;
+                    border-bottom: 3px solid $border-color;
+                    &::after {
+                        color: $white-color;
+                    }
+                }
+            }
+            .classynav > ul > li.active > a {
+                &::after {
+                    color: $white-color;
+                }
+                color: $white-color;
+                background-color: $bg-default;
+                border-bottom: 3px solid $border-color;
+            }
+        }
+        .classynav {
+            .search-btn {
+                color: #b6b6b6;
+                margin-left: 150px;
+                cursor: pointer;
+                @include trans-duration(500ms);
+                i {
+                    @include trans-duration(500ms);
+                }
+                &:hover,
+                &:focus {
+                    i {
+                        color: $bg-default;
+                    }
+                }
+                @media #{$breakpoint-lg} {
+                    margin-left: 50px;
+                }
+                @media #{$breakpoint-md} {
+                    margin-left: 30px;
+                    margin-top: 30px;
+                }
+                @media #{$breakpoint-xs} {
+                    margin-left: 30px;
+                    margin-top: 30px;
+                }
+            }
+        }
+    }
+    .nav-brand img {
+        @media #{$breakpoint-xs} {
+            max-width: 90px;
+        }
+    }
+}
+
+/* ----- Footer Area CSS ----- */
+
+.follow-us-photos {
+    position: relative;
+    z-index: 1;
+    border-top: 1px solid #dcdcdc;
+    h5 {
+        font-size: 18px;
+        padding: 35px 0;
+        margin-bottom: 0;
+    }
+    .photo-feeds {
+        position: relative;
+        z-index: 1;
+        .single-photo-feeds {
+            position: relative;
+            z-index: 1;
+            @include flex(0 0 14.2857%);
+            max-width: 14.2857%;
+            width: 14.2857%;
+            @include trans-duration(500ms);
+            overflow: hidden;
+            @media #{$breakpoint-xs} {
+                @include flex(0 0 25%);
+                max-width: 25%;
+                width: 25%;
+            }
+            @media #{$breakpoint-sm} {
+                @include flex(0 0 20%);
+                max-width: 20%;
+                width: 20%;
+            }
+            img {
+                width: 100%;
+                @include trans-duration(500ms);
+            }
+            .icon {
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                background-color: rgba(64, 186, 55, 0.9);
+                top: 0;
+                left: 0;
+                z-index: 10;
+                cursor: pointer;
+                opacity: 0;
+                visibility: hidden;
+                @include display-flex(flex);
+                @include align-items(center);
+                @include justify-content-center;
+                @include trans-duration(500ms);
+                a {
+                    display: inline-block;
+                    color: $white-color;
+                    font-size: 18px;
+                }
+            }
+            &:hover {
+                img {
+                    @include transform(scale(1.2) rotate(2.5deg));
+                }
+                .icon {
+                    opacity: 1;
+                    visibility: visible;
+                }
+            }
+        }
+    }
+}
+
+.footer-area {
+    position: relative;
+    z-index: 1;
+    width: 100%;
+    height: 140px;
+    border-top: 1px solid #dcdcdc;
+    background-color: $white-color;
+    @media #{$breakpoint-xs} {
+        height: 150px;
+        border-top: 1px solid #ebebeb;
+        margin-top: 30px;
+    }
+    .footer-social-info {
+        padding-right: 15px;
+        a {
+            display: inline-block;
+            color: #b6b6b6;
+            font-size: 13px;
+            margin-right: 30px;
+            &:last-child {
+                margin-right: 0;
+            }
+            &:hover,
+            &:focus {
+                color: $hover-color;
+            }
+        }
+    }
+    p {
+        color: #4b4b4b;
+        font-weight: 600;
+        margin-bottom: 0;
+        padding-left: 15px;
+        @media #{$breakpoint-xs} {
+            padding-left: 0;
+        }
+        a {
+            color: #4b4b4b;
+            font-weight: 600;
+            &:hover,
+            &:focus {
+                color: $hover-color;
+            }
+        }
+    }
+    .footer-logo {
+        @media #{$breakpoint-xs} {
+            max-width: 90px;
+        }
+    }
+}
